--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@400;700&family=Poppins&display=swap');
 
 :root{
-    --cor-de-fundo: #301d1d;
-    --verde: #6FFF57;
+    --cor-de-fundo: hwb(208 28% 15% / 0.79);
+    --verde: #9a57ff;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
